atualizacoes no painel de analise e adolesecentes

--- a/templates/painel-adolescentes.html
+++ b/templates/painel-adolescentes.html
@@ -409,11 +409,11 @@
                             <a href="#" class="proxima-acao-filter-option flex items-center px-4 py-3 text-sm text-gray-700 hover:bg-gray-100" data-acao="2" data-text="Abordagem direta">
                                 <i class="ri-user-line mr-2"></i> Abordagem direta
                             </a>
-                            <a href="#" class="proxima-acao-filter-option flex items-center px-4 py-3 text-sm text-gray-700 hover:bg-gray-100" data-acao="3" data-text="Iniciar método na UBS">
-                                <i class="ri-hospital-line mr-2"></i> Iniciar método na UBS
+                            <a href="#" class="proxima-acao-filter-option flex items-center px-4 py-3 text-sm text-gray-700 hover:bg-gray-100" data-acao="3" data-text="Iniciou método na UBS">
+                                <i class="ri-hospital-line mr-2"></i> Iniciou método na UBS
                             </a>
-                            <a href="#" class="proxima-acao-filter-option flex items-center px-4 py-3 text-sm text-gray-700 hover:bg-gray-100" data-acao="6" data-text="Iniciar método em domicílio">
-                                <i class="ri-home-line mr-2"></i> Iniciar método em domicílio
+                            <a href="#" class="proxima-acao-filter-option flex items-center px-4 py-3 text-sm text-gray-700 hover:bg-gray-100" data-acao="6" data-text="Iniciou método em domicílio">
+                                <i class="ri-home-line mr-2"></i> Iniciou método em domicílio
                             </a>
                             <a href="#" class="proxima-acao-filter-option flex items-center px-4 py-3 text-sm text-gray-700 hover:bg-gray-100" data-acao="4" data-text="Entrega de convite">
                                 <i class="ri-mail-line mr-2"></i> Entrega de convite
@@ -684,12 +684,12 @@
                                 <label class="custom-radio">
                                     <input type="radio" name="action-type" value="3">
                                     <span class="radio-mark"></span>
-                                    Iniciar método na UBS
+                                    Iniciou método na UBS
                                 </label>
                                 <label class="custom-radio">
                                     <input type="radio" name="action-type" value="6">
                                     <span class="radio-mark"></span>
-                                    Iniciar método em domicílio
+                                    Iniciou método em domicílio
                                 </label>
                                 <label class="custom-radio">
                                     <input type="radio" name="action-type" value="4">
@@ -800,8 +800,8 @@
                                             <div class="p-2" id="nextActionDropdownOptionsContainer">
                                                 <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="1">Abordagem com pais</div>
                                                 <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="2">Abordagem direta</div>
-                                                <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="3">Iniciar método na UBS</div>
-                                                <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="6">Iniciar método em domicílio</div>
+                                                <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="3">Iniciou método na UBS</div>
+                                                <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="6">Iniciou método em domicílio</div>
                                                 <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="4">Entrega de convite</div>
                                                 <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="5">Mudou de área</div>
                                                 <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="7">Remover do acompanhamento</div>
