--- a/templates/painel-adolescentes.html
+++ b/templates/painel-adolescentes.html
@@ -903,23 +903,49 @@
                                             });
                                         });
                                     }
-                                } else if (this.dataset.value === '4') { // "Já usa um método"
-                                    methodSection.classList.remove('hidden');
-                                    methodSectionLabel.textContent = 'Método em uso';
+                                } else if (this.dataset.value === '2') { // "Recusou método contraceptivo"
+                                    methodSection.classList.add('hidden');
                                     
-                                    // Restaurar todas as opções do menu "Tipo"
+                                    // Modificar data da próxima ação para +6 meses quando recusar método
+                                    const proximaAcaoDataInput = registerModal.querySelectorAll('input[type="date"]')[1];
+                                    if (proximaAcaoDataInput) {
+                                        const dataEm6Meses = new Date();
+                                        dataEm6Meses.setMonth(dataEm6Meses.getMonth() + 6);
+                                        proximaAcaoDataInput.value = dataEm6Meses.toISOString().split('T')[0];
+                                    }
+                                    
+                                    // Mostrar apenas opções de abordagem no menu "Tipo"
                                     if (nextActionOptionsContainer) {
                                         nextActionOptionsContainer.innerHTML = `
                                             <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="1">Abordagem com pais</div>
                                             <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="2">Abordagem direta com adolescente</div>
-                                            <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="3">Iniciou método na UBS</div>
-                                            <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="4">Entrega de convite</div>
-                                            <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="5">Ação educativa</div>
-                                            <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="6">Iniciou método em domicílio</div>
-                                            <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="7">Remover do acompanhamento</div>
                                         `;
                                         
-                                        // Reconfigurar event listeners para as opções restauradas
+                                        // Reconfigurar event listeners para as novas opções
+                                        const newOptions = nextActionOptionsContainer.querySelectorAll('.cursor-pointer');
+                                        newOptions.forEach(newOption => {
+                                            newOption.addEventListener('click', function () {
+                                                if (nextActionButton && nextActionButton.querySelector('span')) {
+                                                    nextActionButton.querySelector('span').textContent = this.textContent;
+                                                    nextActionButton.dataset.selectedValue = this.dataset.value;
+                                                }
+                                                const nextActionDropdown = document.getElementById('nextActionDropdown');
+                                                if (nextActionDropdown) nextActionDropdown.classList.add('hidden');
+                                            });
+                                        });
+                                    }
+                                } else if (this.dataset.value === '4') { // "Já usa um método"
+                                    methodSection.classList.remove('hidden');
+                                    methodSectionLabel.textContent = 'Método em uso';
+                                    
+                                    // Mostrar apenas opções de abordagem no menu "Tipo"
+                                    if (nextActionOptionsContainer) {
+                                        nextActionOptionsContainer.innerHTML = `
+                                            <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="1">Abordagem com pais</div>
+                                            <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="2">Abordagem direta com adolescente</div>
+                                        `;
+                                        
+                                        // Reconfigurar event listeners
                                         const newOptions = nextActionOptionsContainer.querySelectorAll('.cursor-pointer');
                                         newOptions.forEach(newOption => {
                                             newOption.addEventListener('click', function () {
@@ -935,19 +961,14 @@
                                 } else {
                                     methodSection.classList.add('hidden');
                                     
-                                    // Restaurar todas as opções do menu "Tipo" para outros resultados
+                                    // Para outros resultados (como "Ausente em domicílio"), mostrar apenas opções de abordagem
                                     if (nextActionOptionsContainer) {
                                         nextActionOptionsContainer.innerHTML = `
                                             <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="1">Abordagem com pais</div>
                                             <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="2">Abordagem direta com adolescente</div>
-                                            <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="3">Iniciou método na UBS</div>
-                                            <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="4">Entrega de convite</div>
-                                            <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="5">Ação educativa</div>
-                                            <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="6">Iniciou método em domicílio</div>
-                                            <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="7">Remover do acompanhamento</div>
                                         `;
                                         
-                                        // Reconfigurar event listeners para as opções restauradas
+                                        // Reconfigurar event listeners
                                         const newOptions = nextActionOptionsContainer.querySelectorAll('.cursor-pointer');
                                         newOptions.forEach(newOption => {
                                             newOption.addEventListener('click', function () {
